--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(GoBaseLearn C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(c_go advance/c_go.c)
+add_executable(c_go advance/c_go_t1.c advance/c_go_t1.h advance/c_go/tmp.h advance/c_go/c_go_t2.h)
